--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Project #1: CSE 578 - Spring 2023</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/pointMap.js"></script>
     <style>
       .myContainer {
          margin:auto;
@@ -114,8 +117,8 @@
       #point_map_svg {
          left: 10px;
          margin: 10px;
-         width: 1230px;
-         height: 600px;
+         width: 850px;
+         height: 650px;
          background-color: white;
          border: 1px solid lightgray;
          border-radius: 3px;
