--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
          border: 1px solid lightgray;
          border-radius: 3px;
       }
+      #message_svg{
+         left: 10px;
+         margin: 10px;
+         width: 1230px;
+         height:70px;
+         background-color: white;
+         border: 1px solid lightgray;
+         border-radius: 3px;
+      }
       #word_cloud_svg_1 {
          left: 10px;
          margin: 10px;
@@ -172,6 +181,7 @@
   </div>
     <div id="my_div" >
         <svg id="bee_swarm_svg"></svg>
+        <svg id="message_svg"></svg>
         <svg id="word_cloud_svg_1"></svg>
         <svg id="word_cloud_svg_2"></svg>
         <svg id="word_cloud_svg_3"></svg>
