--- a/index.html
+++ b/index.html
@@ -200,4 +200,5 @@
    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/pointMap.js"></script>
+    <script src="js/pieChart.js"></script>
 </html>
