--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Project #1: CSE 578 - Spring 2023</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
       .myContainer {
          margin:auto;
@@ -36,6 +37,7 @@
          margin: 10px;
          width: 400px;
          height:400px;
+          padding: 20px;
          background-color: white;
          border: 1px solid lightgray;
          border-radius: 3px;
@@ -45,7 +47,8 @@
          
          width: 400px;
          height:400px;
-         background-color: white;
+          padding: 20px;
+          background-color: white;
          border: 1px solid lightgray;
          border-radius: 3px;
       }
@@ -54,7 +57,8 @@
          margin: 10px;
          width: 400px;
          height:400px;
-         background-color: white;
+          padding: 20px;
+          background-color: white;
          border: 1px solid lightgray;
          border-radius: 3px;
       }
@@ -200,4 +204,6 @@
     <script src="js/main.js"></script>
     <script src="js/pointMap.js"></script>
     <script src="js/pieChart.js"></script>
+    <script src="js/wordCloud.js"></script>
+    <script src="js/barchart.js"></script>
 </html>
