--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@
       #point_map_svg {
          left: 10px;
          margin: 10px;
-         width: 850px;
-         height: 650px;
+         width: 1050px;
+         height: 800px;
          background-color: white;
          border: 1px solid lightgray;
          border-radius: 3px;
+      }
+
+      .playButton {
+        cursor: pointer;
+        margin-left: 25px;
       }
 
     </style>
@@ -192,7 +197,13 @@
         <svg id="pie_chart_svg_2"></svg>
         <svg id="pie_chart_svg_3"></svg>
         <svg id="spline_graph_svg"></svg>
-        <svg id="point_map_svg"></svg>
+        <div id = "point_map_div">
+            <svg id="point_map_svg"></svg>
+            <div id="point_map_control">
+                <image src="images/play.png" width="50px" height="50px" onclick="playAnimation()" class="playButton"></image>
+                <input type="range" min="0" max="319" value="0" style="width: 900px; height: 25px; margin-left: 50px;" id="timeSlider" onchange="changeCurrentLimit(this)" />
+            </div>
+        </div>
     </div>
 </div>
 </body>
