--- a/index.html
+++ b/index.html
@@ -130,7 +130,25 @@
             border-radius: 3px;
         }
 
-        #spline_graph_svg {
+        #arc_diagram_svg {
+         left: 10px;
+         margin: 10px;
+         width: 1230px;
+         height:520px;
+         background-color: white;
+         border: 1px solid lightgray;
+         border-radius: 3px;
+      }
+      #arc_diagram_svg {
+         left: 10px;
+         margin: 10px;
+         width: 1230px;
+         height:520px;
+         background-color: white;
+         border: 1px solid lightgray;
+         border-radius: 3px;
+      }
+      #spline_graph_svg {
             left: 10px;
             margin: 10px;
             width: 1230px;
@@ -190,59 +208,40 @@
             </label>
         </li>
     </ul> -->
-        <div id="checkboxes" class="centered">
-            <span style="position:relative; left: 10px">Major Events:&nbsp;&nbsp;</span>
-            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                <input type="checkbox" style="margin-right:2px;" value="pok_rally" class="mdl-checkbox__input event"
-                    checked="">POK Rally
-                <span class="mdl-checkbox__label" id="pok_rallycolor"
-                    style="font-size: 20px; color: red;">&#9679;&nbsp;&nbsp;</span>
-            </label>
-            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                <input type="checkbox" style="margin-right:2px;" value="fire" class="mdl-checkbox__input event"
-                    checked="">Fire
-                <span class="mdl-checkbox__label" id="firecolor"
-                    style="font-size: 20px; color: blue;">&#9679;&nbsp;&nbsp;</span>
-            </label>
-            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                <input type="checkbox" style="margin-right:2px;" value="hit_and_run" class="mdl-checkbox__input event"
-                    checked="">Hit and Run
-                <span class="mdl-checkbox__label" id="hitandruncolor"
-                    style="font-size: 20px; color: orange;">&#9679;&nbsp;&nbsp;</span>
-            </label>
-        </div>
-        <div id="my_div">
-            <div id="bee_swarm_div">
-                <svg id="bee_swarm_svg"></svg>
-            </div>
-            <div id = "word_cloud_div">
-                <svg id="word_cloud_svg_1"></svg>
-                <svg id="word_cloud_svg_2"></svg>
-                <svg id="word_cloud_svg_3"></svg>
-            </div>
-            <!-- <svg id="message_svg"></svg> -->
-            <div id = "bar_chard_div">
-                <svg id="bar_chart_svg_1"></svg>
-                <svg id="bar_chart_svg_2"></svg>
-                <svg id="bar_chart_svg_3"></svg>
-            </div>
-            <div id = "pie_chart_div">
-                <svg id="pie_chart_svg_1"></svg>
-                <svg id="pie_chart_svg_2"></svg>
-                <svg id="pie_chart_svg_3"></svg>
-            </div>
-            <div id = "spline_graph_div">
-                <svg id="spline_graph_svg"></svg>
-            </div>
-            <div id="point_map_div">
-                <svg id="point_map_svg"></svg>
-                <div id="point_map_control">
-                    <image src="images/play.png" width="50px" height="50px" onclick="playAnimation()"
-                        class="playButton"></image>
-                    <input type="range" min="0" max="319" value="0"
-                        style="width: 900px; height: 25px; margin-left: 50px;" id="timeSlider"
-                        onchange="changeCurrentLimit(this)" />
-                </div>
+    <div id="checkboxes" class="centered">
+      <span style="position:relative; left: 10px">Major Events:&nbsp;&nbsp;</span>
+      <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+          <input type="checkbox" style="margin-right:2px;" value="pok_rally" class="mdl-checkbox__input event" checked="">POK Rally
+          <span class="mdl-checkbox__label" id="pok_rallycolor" style="font-size: 20px; color: red;">&#9679;&nbsp;&nbsp;</span>
+      </label>
+      <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+          <input type="checkbox" style="margin-right:2px;" value="fire" class="mdl-checkbox__input event" checked="">Fire
+          <span class="mdl-checkbox__label" id="firecolor" style="font-size: 20px; color: blue;">&#9679;&nbsp;&nbsp;</span>
+      </label>
+      <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+          <input type="checkbox" style="margin-right:2px;" value="hit_and_run" class="mdl-checkbox__input event" checked="">Hit and Run
+          <span class="mdl-checkbox__label" id="hitandruncolor" style="font-size: 20px; color: orange;">&#9679;&nbsp;&nbsp;</span>
+      </label>
+  </div>
+    <div id="my_div" >
+        <svg id="bee_swarm_svg"></svg>
+        <!-- <svg id="message_svg"></svg> -->
+        <svg id="word_cloud_svg_1"></svg>
+        <svg id="word_cloud_svg_2"></svg>
+        <svg id="word_cloud_svg_3"></svg>
+        <svg id="bar_chart_svg_1"></svg>
+        <svg id="bar_chart_svg_2"></svg>
+        <svg id="bar_chart_svg_3"></svg>
+        <svg id="pie_chart_svg_1"></svg>
+        <svg id="pie_chart_svg_2"></svg>
+        <svg id="pie_chart_svg_3"></svg>
+        <svg id="arc_diagram_svg"></svg>
+        <svg id="spline_graph_svg"></svg>
+        <div id = "point_map_div">
+            <svg id="point_map_svg"></svg>
+            <div id="point_map_control">
+                <image src="images/play.png" width="50px" height="50px" onclick="playAnimation()" class="playButton"></image>
+                <input type="range" min="0" max="319" value="0" style="width: 900px; height: 25px; margin-left: 50px;" id="timeSlider" onchange="changeCurrentLimit(this)" />
             </div>
         </div>
         <!-- <line id="divider" x1="0" y1="50" x2="100%" y2="50" draggable="true"></line> -->
