Commit for html changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             margin: 10px;
             width: 400px;
             height: 400px;
-            padding: 20px;
             background-color: white;
             border: 1px solid lightgray;
             border-radius: 3px;
@@ -50,7 +49,6 @@
             margin: 10px;
             width: 400px;
             height: 400px;
-            padding: 20px;
             background-color: white;
             border: 1px solid lightgray;
             border-radius: 3px;
@@ -60,7 +58,6 @@
             margin: 10px;
             width: 400px;
             height: 400px;
-            padding: 20px;
             background-color: white;
             border: 1px solid lightgray;
             border-radius: 3px;
@@ -69,6 +66,10 @@
         #bar_chart_svg_1, #bar_chart_svg_2, #bar_chart_svg_3 {
             width: 390px;
             margin: 8px;
+        }
+
+        #word_cloud_svg_1, #word_cloud_svg_2, #word_cloud_svg_3 {
+            padding: 10px;
         }
 
         #arc_diagram_svg {
