--- a/index.html
+++ b/index.html
@@ -139,26 +139,15 @@
         }
 
         #arc_diagram_svg {
-            left: 10px;
-            margin: 10px;
-            width: 1230px;
-            height: 520px;
-            background-color: white;
-            border: 1px solid lightgray;
-            border-radius: 3px;
-        }
-
-        #arc_diagram_svg {
-            left: 10px;
-            margin: 10px;
-            width: 1230px;
-            height: 520px;
-            background-color: white;
-            border: 1px solid lightgray;
-            border-radius: 3px;
-        }
-
-        #spline_graph_svg {
+         left: 10px;
+         margin: 10px;
+         width: 1230px;
+         height:520px;
+         background-color: white;
+         border: 1px solid lightgray;
+         border-radius: 3px;
+      }
+      #spline_graph_svg {
             left: 10px;
             margin: 10px;
             width: 1230px;
@@ -295,10 +284,10 @@
                 <svg id="pie_chart_svg_2"></svg>
                 <svg id="pie_chart_svg_3"></svg>
             </div>
-            <div id="arc_diagram_div">
+            <div >
                 <svg id="arc_diagram_svg"></svg>
             </div>
-            <div id="spline_graph_div">
+            <div>
                 <svg id="spline_graph_svg"></svg>
             </div>
             <div id="point_map_div">
@@ -324,5 +313,6 @@
 <script src="js/pieChart.js"></script>
 <script src="js/wordCloud.js"></script>
 <script src="js/barchart.js"></script>
+<script src="js/linechart.js"></script>
 
 </html>
