commit for index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-    <title>Project #1: CSE 578 - Spring 2023</title>
+    <title>Course Project: CSE 578 - Spring 2023</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
     <style>
         .myContainer {
@@ -15,8 +15,22 @@
             margin-left: 60px;
             width: 1230px;
         }
+        #description {
+            margin :10px;
+            padding :10px;
+            width : 890px;
+            height : 300px;
+            align-items: left;
+        }
+        #contribution {
+            margin :10px;
+            width : 280px;
+            height : 230px;
+            align-items: right;
 
+        }
         #bee_swarm_div,
+        #explaination_div,
         #word_cloud_div,
         #pie_chart_div,
         #spline_graph_div,
@@ -124,14 +138,24 @@
 
 <body>
     <div class="myContainer">
-        <h1 class="text-center">Project #1: Retrospective analysis of events at Abila City using visualization
-            techniques.</h1>
-        <h3 class="text-center">Sai Surya Kaushik Punyamurthula - spunyam2@asu.edu</h3>
-        <h3 class="text-center">Abhishek Annabathula - aannaba1@asu.edu</h3>
-        <h3 class="text-center">Sumedha Chillara - schillar@asu.edu</h3>
-        <h3 class="text-center">Nagaraju Machavarapu - nmachav1@asu.edu</h3>
-        <h3 class="text-center">Naga Sai Krishna Reddy Vintha - nvintha1@asu.edu</h3>
-        <h3 class="text-center">Dileep Kumar Reddy Maligireddy - dmaligir@asu.edu</h3>
+        <hr>
+        <h2 class="text-center">Retrospective Analysis of Events at Abila City Using Visualization
+            Techniques.</h2>
+        <hr>
+        <div class="row">
+        <div id = "description" style="border: 1px solid black; padding: 10px;">
+            <p></p>
+        </div>
+        <div id = "contribution" style="border: 1px solid black; padding: 10px;">
+            <h5>Contributors:</h5>
+            <h6>* Abhishek Annabathula</h6>
+            <h6>* Dileep Kumar Reddy Maligireddy</h6>
+            <h6>* Naga Sai Krishna Reddy Vintha</h6>
+            <h6>* Nagaraju Machavarapu</h6>
+            <h6>* Sai Surya Kaushik Punyamurthula</h6>
+            <h6>* Sumedha Chillara</h6>
+        </div>
+    </div>
         <hr>
         <div id="checkboxes" class="centered">
             <span style="position:relative; left: 10px">Major Events:&nbsp;&nbsp;</span>
