--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         <hr>
         <div class="row">
         <div id = "description" style="border: 1px solid black; padding: 10px;">
-            <p></p>
+            <p>In this project, we are trying to answer the three questions posed in the VAST 2021 Mini Challenge 3 by using the call center data and the microblog data provided.
+                The dataset contains tweets/messages about the three major events happened at Abila City
+            </p>
         </div>
         <div id = "contribution" style="border: 1px solid black; padding: 10px;">
             <h5>Contributors:</h5>
