--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             margin :10px;
             padding :10px;
             width : 890px;
-            height : 300px;
+            height : 400px;
             align-items: left;
         }
         #contribution {
             margin :10px;
-            width : 280px;
-            height : 230px;
+            width : 270px;
+            height : 400px;
             align-items: right;
 
         }
@@ -144,8 +144,16 @@
         <hr>
         <div class="row">
         <div id = "description" style="border: 1px solid black; padding: 10px;">
+            <h5>Description:</h5>
             <p>In this project, we are trying to answer the three questions posed in the VAST 2021 Mini Challenge 3 by using the call center data and the microblog data provided.
-                The dataset contains tweets/messages about the three major events happened at Abila City
+                The dataset contains tweets/messages about the three major events happened at Abila City and also some unrelated spam/chatter information. The beeswarm graph, word cloud,
+                pie chart, bar chart and arc diagram helps the user to analyze the data and answer the first task of the challenge to characterize the data into different events happening at Abila. 
+                The spline graph helps us understand the risk/threat to public at a given point in time by answering the second task of the challenge. Point Map helps to visualize the events at Abila by visually 
+                representing the locations of the messages tweeted. Bigger circles on the point map represents where the three major events happened and helps us answer the third task of the challenge which is to 
+                help the user understand where to send the first responders if there was a chance.
+            </p>
+            <h5>Interactions:</h5>
+            <p>
             </p>
         </div>
         <div id = "contribution" style="border: 1px solid black; padding: 10px;">
@@ -156,6 +164,13 @@
             <h6>* Nagaraju Machavarapu</h6>
             <h6>* Sai Surya Kaushik Punyamurthula</h6>
             <h6>* Sumedha Chillara</h6>
+            <h5>Contact Info:</h5>
+            <h6>* aannaba1@asu.edu</h6>
+            <h6>* dmaligir@asu.edu</h6>
+            <h6>* nvintha1@asu.edu</h6>
+            <h6>* nmachav1@asu.edu</h6>
+            <h6>* spunyam2@asu.edu</h6>
+            <h6>* schillar@asu.edu</h6>
         </div>
     </div>
         <hr>
