--- a/index.html
+++ b/index.html
@@ -21,12 +21,26 @@
             width : 890px;
             height : 590px;
             align-items: left;
+            background-color: #F5F5DC;
+            border: 3px solid black;
+            border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
         }
         #contribution {
             margin :10px;
             width : 270px;
             height : 400px;
             align-items: right;
+            background-color: #F5F5DC;
+            border: 3px solid black;
+            border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
 
         }
         #bee_swarm_div,
@@ -45,45 +59,81 @@
             margin: 10px;
             width: 1400px;
             height: 700px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #word_cloud_svg_1, #pie_chart_svg_1, #bar_chart_svg_1 {
             margin: 10px;
             width: 400px;
             height: 400px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #word_cloud_svg_2, #pie_chart_svg_2, #bar_chart_svg_2 {
             margin: 10px;
             width: 400px;
             height: 400px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #word_cloud_svg_3, #pie_chart_svg_3, #bar_chart_svg_3 {
             margin: 10px;
             width: 400px;
             height: 400px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #bar_chart_svg_1, #bar_chart_svg_2, #bar_chart_svg_3 {
             width: 390px;
             margin: 8px;
+            background-color: #F5F5DC;
+            border: 3px solid black;
+            border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #word_cloud_svg_1, #word_cloud_svg_2, #word_cloud_svg_3 {
             padding: 10px;
+            background-color: #F5F5DC;
+            border: 3px solid black;
+            border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #arc_diagram_svg {
@@ -91,9 +141,14 @@
             margin: 10px;
             width: 1230px;
             height: 520px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #spline_graph_svg {
@@ -101,18 +156,27 @@
             margin: 10px;
             width: 1230px;
             height: 400px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
         }
 
         #point_map_svg {
             left: 10px;
             width: 1050px;
             height: 800px;
-            background-color: white;
-            border: 1px solid lightgray;
+            background-color: #F5F5DC;
+            border: 3px solid black;
             border-radius: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
         }
 
         .playButton {
@@ -132,6 +196,9 @@
           stroke: black;
           border-radius: 8px;
           pointer-events: none;
+        }
+        body {
+            background: linear-gradient(to bottom, #F5F5DC, #F5F5DC);
         }
     </style>
 </head>
