--- a/index.html
+++ b/index.html
@@ -272,20 +272,12 @@
                 <h4>Bee Swarm - Characterization of events</h4>
                 <svg id="bee_swarm_svg"></svg>
             </div>
-            <div style="display: flex; flex-direction: column; align-items: center;">
-                <h4>Word Clouds - Frequency of Words</h4>
-                <div id="word_cloud_div">
-                    <svg id="word_cloud_svg_1"></svg>
-                    <svg id="word_cloud_svg_2"></svg>
-                    <svg id="word_cloud_svg_3"></svg>
-                </div>
-            </div>
 
             <div id="bar_chart_div">
                 <div class="row" style="margin-left: 10px;">
                     <div class="col-1">Trends:</div>
                     <div class="col-3">
-                        <select id="country-select" onchange="drawBarsChanged()">
+                        <select id="country-select" onchange="drawBarsChanged()" style="background-color: #F5F5DC ">
                             <option value="author" selected>Authors</option>
                             <option value="tag">HashTags</option>
                         </select>
@@ -319,6 +311,14 @@
                     <svg id="pie_chart_svg_1"></svg>
                     <svg id="pie_chart_svg_2"></svg>
                     <svg id="pie_chart_svg_3"></svg>
+                </div>
+            </div>
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                <h4>Word Clouds - Frequency of Words</h4>
+                <div id="word_cloud_div">
+                    <svg id="word_cloud_svg_1"></svg>
+                    <svg id="word_cloud_svg_2"></svg>
+                    <svg id="word_cloud_svg_3"></svg>
                 </div>
             </div>
             <div style="display: flex; flex-direction: column; align-items: center;">
