--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
 
         #point_map_svg {
             position: relative;
-            left: 10px;
-            width: 1210px;
+            width: 1230px;
             height: 800px;
             background-color: #F5F5DC;
             border: 3px solid black;
@@ -192,7 +191,6 @@
 
         #point_map_div {
             width: 1230px;
-            margin: 10px;
             margin-bottom: 5%;
             display: flex;
             flex-direction: column;
@@ -367,6 +365,7 @@
                 <svg id="spline_graph_svg"></svg>
             </div>
             <div id="point_map_div">
+                <h4>Point Map - Geospatial Location of Messages</h4>
                 <div class="row" style="position: relative;">
                     <svg id="point_map_svg"></svg>
                     <div id="point_map_message_info" style="margin-left: 10px;"></div>
