--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 happening at Abila. When a checkbox is unselected/selected, the changes will be reflected in word clouds, pie charts and bar charts. Word cloud represents the most tweeted words in that time frame. Beeswarm also has a tooltip 
                 that shows the author and message tweeted. Bar chart has dropdown to show most tweeted tags or authors during that time frame. Pie chart shows the distibution of the sentiment Analysis of the tweets in that time frame with a tooltip. 
                 Arc diagram, when hovered on a circle, connects all the authors that tweeted about the same major event that author tweeted. Point Map shows animation of the location of the tweets categorized via event types when the play button is clicked.
-                 The range Slider is used to show animation of the data points from that time to the end of the time frame. The "Track Van" button is used to show the "hit and run" van path over time. When hovered on a circle, lines will be connected to the circles with the 
+                 The range Slider is used to show animation of the data points from that time to the end of the time frame. The "Overview" button is used to show the "hit and run" van path over time. When hovered on a circle, lines will be connected to the circles with the 
                  same type of event. The circle also shows a tooltip with the data related to that message.
             </p>
         </div>
@@ -375,7 +375,7 @@
                         class="playButton"></image>
                     <input type="range" min="0" max="320" value="0" step="20" list="tickmarks" id="timeSlider"
                         onchange="changeCurrentLimit(this)" />
-                    <button class="btn btn-dark" width="100px" height="50px" style="margin-left: 50px;" onclick="drawHitAndRunLines()">Track Van</button>
+                    <button class="btn btn-dark" width="100px" height="50px" style="margin-left: 50px;" onclick="drawHitAndRunLines()">Overview</button>
                     <datalist id="tickmarks">
                         <option value="0" label="17:00"></option>
                         <option value="20"></option>
