Commit for tooltip fixes

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </label>
         </div>
         <div id="my_div">
-            <div style="display: flex; flex-direction: column; align-items: center;">
+            <div id="bee_swarm_div" style="display: flex; flex-direction: column; align-items: center;">
                 <h4>Bee Swarm - Characterization of events</h4>
                 <svg id="bee_swarm_svg"></svg>
             </div>
@@ -360,7 +360,7 @@
                 <h4>Arc Diagram - Connecting Similar Author Messages</h4>
                 <svg id="arc_diagram_svg"></svg>
             </div>
-            <div style="display: flex; flex-direction: column; align-items: center;">
+            <div id="spline_graph_id" style="display: flex; flex-direction: column; align-items: center;">
                 <h4>Spline Graph - Risk Analysis</h4>
                 <svg id="spline_graph_svg"></svg>
             </div>
